# OntoCanvas

./: .gitignore  CHANGELOG.md  OntoCanvas.psd  README.md  index.html  package-lock.json  package.json  pyproject.toml  release.config.js  screenshot_editor.py  temp_main_97d5cec.ts  vite.config.ts  vitest.config.ts  vitest.e2e.config.ts
.cursor/: continue-work-prompt.md
.cursor/notes/: cache-reconstruction-findings.md  rdflib-migration.md  rdflib-test-failures.md
.cursor/plans/: custom_serializer_rewrite_935df6a5.plan.md  data_property_drag_coupling_3fd255ce.plan.md  source_preservation_implementation_54a2938a.plan.md
.cursor/rules/: general.mdc  lessons-learned.mdc  testing-priority.mdc
.cursor/transcripts/: cursor_ontology_design_and_editor.md  cursor_refactoring_and_modularization_o.md
.github/workflows/: coverage.yml  deploy.yml  (+4 more)
Editor/: README.md  package-lock.json  package.json  screenshot_editor.py  vite.config.ts  vitest.e2e.config.ts
Visualizer/: README.md  convert_to_html_view.py  screenshot_visualizer.py  visualizer.html
ontology/: README.md  aec_drawing_ontology.display.json  aec_drawing_ontology.ttl  aec_drawing_ontology_v01.display.json  aec_drawing_ontology_v01.json  aec_drawing_ontology_v01.ttl
scripts/: extract_all_workspaces.py
src/: externalOntologySearch.test.ts  externalOntologySearch.ts  graph.ts  main.test.ts  main.ts  parser.test.ts  parser.ts  state.ts  storage.ts  style.css  test-external-object-properties.ts  turtlePostProcess.ts  types.ts  vite-env.d.ts
tests/: test_editor_delete_e2e.py  test_ontology.py  unitSetup.ts
(+2798 files in other folders)
