[project]
name = "kg-data-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymupdf>=1.26.7",
    "pypdf>=6.6.2",
    "rdflib>=7.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
